--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ logItems(food);
 						alt="cat is typing">
 				</section>
 				<section>
-					<h3 style="color:#e934d7"></h3>
+					<h3 style="color:#e934d7">How to DRY?</h3>
 					<ul>
 						<li>Divide your code and logic into smaller reusable units and use that
 							code by calling it where you want.</li>
